串联页面完成

--- a/Company-Pro.html
+++ b/Company-Pro.html
@@ -27,26 +27,26 @@
         </button>
         <div class="collapse navbar-collapse " id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
+            <li class="nav-item px-2">
+              <a class="nav-link" href="Home.html">首页<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="About-Us.html">关于我们</a>
+            </li>
             <li class="nav-item active px-2">
-              <a class="nav-link" href="#">首页<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="Company-Pro.html">公司产品</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="#">关于我们</a>
+              <a class="nav-link" href="Sucess-Case.html">成功案例</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="#">公司产品</a>
+              <a class="nav-link" href="Cooper-Parter.html">合作伙伴</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="#">成功案例</a>
+              <a class="nav-link" href="News-Center.html">新闻中心</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="#">合作伙伴</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">新闻中心</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">联系我们</a>
+              <a class="nav-link" href="Content-Us.html">联系我们</a>
             </li>
           </ul>
         </div>
@@ -343,12 +343,12 @@
               <div class="row ml-5">
                 <div class="col-12 col-md-6 my-3 py-2 tab-older">
                   <div class="container ">
-                      <img src="img/web/p-ico-wljh.png" alt="">
-                      <span>01</span>
-                      <h3>物联监控</h3>
-                      <p>水表监测、体征监测、睡眠监测、智能马桶生化监测</p>
+                    <img src="img/web/p-ico-wljh.png" alt="">
+                    <span>01</span>
+                    <h3>物联监控</h3>
+                    <p>水表监测、体征监测、睡眠监测、智能马桶生化监测</p>
                   </div>
-                 
+
                 </div>
                 <div class="col-12 col-md-6 my-3 py-2 tab-older">
                   <img src="img/web/p-ico-ai.png" alt="">
@@ -384,7 +384,7 @@
         <div class="col-12 col-md-8">
           <div class="row">
             <div class="col-4 bottom-nav-item">
-              <a href="#">
+              <a href="About-Us.html">
                 <h3>关于我们</h3>
               </a>
               <img src="img/web/line2.png" alt="">
@@ -394,7 +394,7 @@
               </div>
             </div>
             <div class="col-4 bottom-nav-item">
-              <a href="#">
+              <a href="Company-Pro.html">
                 <h3>公司产品</h3>
               </a>
               <img src="img/web/line2.png" alt="">
@@ -406,7 +406,7 @@
               </div>
             </div>
             <div class="col-4 bottom-nav-item">
-              <a href="#">
+              <a href="Sucess-Case.html">
                 <h3>成功案例</h3>
               </a>
               <img src="img/web/line2.png" alt="">
@@ -419,7 +419,7 @@
           </div>
         </div>
         <div class="col-12 col-lg-4 bottom-nav-item">
-          <a href="contact-us.shtml">
+          <a href="Content-Us.html">
             <h3>联系我们</h3>
           </a>
           <img src="img/web/line2.png" alt="">
