--- a/Content-Us.html
+++ b/Content-Us.html
@@ -27,26 +27,26 @@
         </button>
         <div class="collapse navbar-collapse " id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
+            <li class="nav-item px-2">
+              <a class="nav-link" href="Home.html">首页<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="About-Us.html">关于我们</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="Company-Pro.html">公司产品</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="Sucess-Case.html">成功案例</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="Cooper-Parter.html">合作伙伴</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="News-Center.html">新闻中心</a>
+            </li>
             <li class="nav-item active px-2">
-              <a class="nav-link" href="#">首页<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">关于我们</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">公司产品</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">成功案例</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">合作伙伴</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">新闻中心</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">联系我们</a>
+              <a class="nav-link" href="Content-Us.html">联系我们</a>
             </li>
           </ul>
         </div>
@@ -123,11 +123,6 @@
       </div>
     </div>
 
-
-
-
-
-
     <!-- 底部导航 -->
     <div class="container-fluid mt-5 bottom-nav">
       <div class="container">
@@ -135,7 +130,7 @@
           <div class="col-12 col-md-8">
             <div class="row">
               <div class="col-4 bottom-nav-item">
-                <a href="#">
+                <a href="About-Us.html">
                   <h3>关于我们</h3>
                 </a>
                 <img src="img/web/line2.png" alt="">
@@ -145,7 +140,7 @@
                 </div>
               </div>
               <div class="col-4 bottom-nav-item">
-                <a href="#">
+                <a href="Company-Pro.html">
                   <h3>公司产品</h3>
                 </a>
                 <img src="img/web/line2.png" alt="">
@@ -157,7 +152,7 @@
                 </div>
               </div>
               <div class="col-4 bottom-nav-item">
-                <a href="#">
+                <a href="Sucess-Case.html">
                   <h3>成功案例</h3>
                 </a>
                 <img src="img/web/line2.png" alt="">
@@ -170,7 +165,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-4 bottom-nav-item">
-            <a href="contact-us.shtml">
+            <a href="Content-Us.html">
               <h3>联系我们</h3>
             </a>
             <img src="img/web/line2.png" alt="">
