--- a/Home.html
+++ b/Home.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <link href="font/css/all.min.css" rel="stylesheet">
+  <link href="font/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/app.css">
 </head>
 
@@ -27,25 +29,25 @@
         <div class="collapse navbar-collapse " id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active px-2">
-              <a class="nav-link" href="#">首页<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="Home.html">首页<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="#">关于我们</a>
+              <a class="nav-link" href="About-Us.html">关于我们</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="#">公司产品</a>
+              <a class="nav-link" href="Company-Pro.html">公司产品</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="#">成功案例</a>
+              <a class="nav-link" href="Sucess-Case.html">成功案例</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="#">合作伙伴</a>
+              <a class="nav-link" href="Cooper-Parter.html">合作伙伴</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="#">新闻中心</a>
+              <a class="nav-link" href="News-Center.html">新闻中心</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="#">联系我们</a>
+              <a class="nav-link" href="Content-Us.html">联系我们</a>
             </li>
           </ul>
         </div>
@@ -329,14 +331,14 @@
           <div class="cointer">
             <div class="row">
               <div class="col-12 col-md-6">
-                <p>网站首页</p>
-                <p>关注我们</p>
-                <p>公司产品</p>
+                <p><a href="Home.html"><span>网站首页</span></a></p>
+                <p><a href="About-Us.html"><span>关于我们</span></a></p>
+                <p><a href="Company-Pro.html"><span>公司产品</span></a></p>
               </div>
               <div class="col-12 col-md-6">
-                <p>成功案例</p>
-                <p>合作伙伴</p>
-                <p>新闻中心</p>
+                <p><a href="Sucess-Case.html"><span>成功案例</span></a></p>
+                <p><a href="Cooper-Parter.html"><span>合作伙伴</span></a></p>
+                <p><a href="News-Center.html"><span>新闻中心</span></a></p>
               </div>
             </div>
           </div>
@@ -345,9 +347,9 @@
       <div class="col-6 col-md-4">
         <h5>联系我们</h5>
         <img src="img/web/line2.png" alt="">
-        <p>质询热线:000-000-000</p>
-        <p>联系邮箱:baotu.com</p>
-        <p>联系地址:江苏省南京市秦淮区金陵御景园商务大厦7楼7A</p>
+        <p><i class="fas fa-phone-volume mr-2"></i><span>咨询热线：000-0000-0000</span></p>
+        <p><i class="fas fa-mail-bulk mr-2"></i><span>联系邮箱：liaodu_keji@163.com</span></p>
+        <p><i class="fas fa-address-card mr-2"></i><span>联系地址：江苏省南京市秦淮区金陵御景园商务大厦7楼7A</span></p>
       </div>
       <div class="col-6 col-md-4">
         <div class="container pb-3">
@@ -365,9 +367,6 @@
   <div class="container-fluid footer-cp text-center">
     Copyright ©2019 All Rights Reserved　南京辽渡信息科技有限公司　版权所有
     <div />
-
-
-
 </body>
 
 </html>
