--- a/News-Center.html
+++ b/News-Center.html
@@ -27,26 +27,26 @@
         </button>
         <div class="collapse navbar-collapse " id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
+            <li class="nav-item px-2">
+              <a class="nav-link" href="Home.html">首页<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="About-Us.html">关于我们</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="Company-Pro.html">公司产品</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="Sucess-Case.html">成功案例</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="Cooper-Parter.html">合作伙伴</a>
+            </li>
             <li class="nav-item active px-2">
-              <a class="nav-link" href="#">首页<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="News-Center.html">新闻中心</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="#">关于我们</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">公司产品</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">成功案例</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">合作伙伴</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">新闻中心</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">联系我们</a>
+              <a class="nav-link" href="Content-Us.html">联系我们</a>
             </li>
           </ul>
         </div>
@@ -116,166 +116,10 @@
             </div>
           </div>
           <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
-            <!-- <div class="text-center about-body">
-              <h3 class="p-0 pt-5">核心团队</h3>
-              <p class="about-subtitle">CORE TEAM</p>
-              <div class="text-left about-content pt-2">
-                <div class="row p-0">
-                  <div class="col-12 col-lg-4 about-team-member">
-                    <img src="img/web/about-team-member01.png" alt="">
-                    <h3>洪剑方</h3>
-                    <p>CEO/总经理</p>
-                    <div>
-                      个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍。
-                    </div>
-                  </div>
-                  <div class="col-12 col-lg-4 about-team-member">
-                    <img src="img/web/about-team-member02.png" alt="">
-                    <h3>耿云龙</h3>
-                    <p>CMO/</p>
-                    <div>
-                      个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍。
-                    </div>
-                  </div>
-                  <div class="col-12 col-lg-4 about-team-member">
-                    <img src="img/web/about-team-member03.png" alt="">
-                    <h3>姓名</h3>
-                    <p>营销经理</p>
-                    <div>
-                      个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍。
-                    </div>
-                  </div>
-
-                  <div class="col-12 col-lg-4 about-team-member">
-                    <img src="img/web/about-team-member01.png" alt="">
-                    <h3>姓名</h3>
-                    <p>营销经理</p>
-                    <div>
-                      个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍。
-                    </div>
-                  </div>
-                  <div class="col-12 col-lg-4 about-team-member">
-                    <img src="img/web/about-team-member02.png" alt="">
-                    <h3>姓名</h3>
-                    <p>营销经理</p>
-                    <div>
-                      个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍。
-                    </div>
-                  </div>
-                  <div class="col-12 col-lg-4 about-team-member">
-                    <img src="img/web/about-team-member03.png" alt="">
-                    <h3>姓名</h3>
-                    <p>营销经理</p>
-                    <div>
-                      个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍。
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div> -->
+            
           </div>
           <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
-            <!-- <div class="container text-center px-md-5">
-              <img src="img/web/p-dangjian-title.png" alt="" class="img-responsive w-100 p-5">
-            </div>
-            <div class="container">
-              <div class="row mb-md-2">
-                <div class="col-12 col-md-6 text-right mb-2">
-                  <div class="row d-flex flex-row pr-md-2">
-                    <div class="col-9 tab-part">
-                      <h3>组织管理系统</h3>
-                      <p>党组织管理、换届管理、风格化管理 党建电子地图、组织积分</p>
-                    </div>
-                    <div class="col-3">
-                      <img src="img/web/p-ico-xitong.png" class="w-100 img-responsive" alt="">
-                    </div>
-                  </div>
-                </div>
-                <div class="col-12 col-md-6 text-left mb-2">
-                  <div class="row d-flex flex-row-reverse pl-md-2">
-                    <div class="col-9 tab-part">
-                      <h3>党建宣传</h3>
-                      <p>党建门户、三务公开、活动专题</p>
-                    </div>
-                    <div class="col-3">
-                      <img src="img/web/p-ico-xuanchuan.png" class="w-100 img-responsive" alt="">
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="row mb-md-2">
-                <div class="col-12 col-md-6 text-right mb-2">
-                  <div class="row d-flex flex-row pr-md-2">
-                    <div class="col-9 tab-part">
-                      <h3>党员信息管理</h3>
-                      <p>党员数据管理、发展党员管理、系统预警管理、党 组织关系转接、困难党员帮扶、流动党员管理、先进 党员管理、历史党员管理、不合格党员认定</p>
-                    </div>
-                    <div class="col-3">
-                      <img src="img/web/p-ico-xitong.png" class="w-100 img-responsive" alt="">
-                    </div>
-                  </div>
-                </div>
-                <div class="col-12 col-md-6 text-left mb-2">
-                  <div class="row d-flex flex-row-reverse pl-md-2">
-                    <div class="col-9 tab-part">
-                      <h3>群众服务</h3>
-                      <p>民生服务、民意调研、志愿者服务</p>
-                    </div>
-                    <div class="col-3">
-                      <img src="img/web/p-ico-fuwu.png" class="w-100 img-responsive" alt="">
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="row mb-md-2">
-                <div class="col-12 col-md-6 text-right mb-2">
-                  <div class="row d-flex flex-row pr-md-2">
-                    <div class="col-9 tab-part">
-                      <h3>党建工作管理</h3>
-                      <p>党员工作看板、党务办公、考核 评价体系</p>
-                    </div>
-                    <div class="col-3">
-                      <img src="img/web/p-ico-gzuo.png" class="w-100 img-responsive" alt="">
-                    </div>
-                  </div>
-                </div>
-                <div class="col-12 col-md-6 text-left mb-2">
-                  <div class="row d-flex flex-row-reverse pl-md-2">
-                    <div class="col-9 tab-part">
-                      <h3>党员学习</h3>
-                      <p>网格党校、专题学习、考试中心学习 笔记、学习积分</p>
-                    </div>
-                    <div class="col-3">
-                      <img src="img/web/p-ico-xuexi.png" class="w-100 img-responsive" alt="">
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="row mb-md-2">
-                <div class="col-12 col-md-6 text-right mb-2">
-                  <div class="row d-flex flex-row pr-md-2">
-                    <div class="col-9 tab-part">
-                      <h3>党建作风</h3>
-                      <p>民主评议、民主监督、志愿者服务</p>
-                    </div>
-                    <div class="col-3">
-                      <img src="img/web/p-ico-zuofeng.png" class="w-100 img-responsive" alt="">
-                    </div>
-                  </div>
-                </div>
-                <div class="col-12 col-md-6 text-left mb-2">
-                  <div class="row d-flex flex-row-reverse pl-md-2">
-                    <div class="col-9 tab-part">
-                      <h3>党员先锋</h3>
-                      <p>积分管理、党支部积分、党员积分</p>
-                    </div>
-                    <div class="col-3">
-                      <img src="img/web/p-ico-xianfeng.png" class="w-100 img-responsive" alt="">
-                    </div>
-                  </div>
-                </div>
-              </div> -->
-            <!-- </div> -->
+            
           </div>
         </div>
       </div>
@@ -283,23 +127,23 @@
   </div>
   <!-- 分页 -->
   <div class="container-fluid">
-      <div class="container">
-          <nav aria-label="Page navigation example">
-              <ul class="pagination justify-content-end">
-                  <li class="page-item disabled">
-                      <a class="page-link" href="#" tabindex="-1">首页</a>
-                  </li>
-                  <li class="page-item"><a class="page-link" href="#">上一页</a></li>
-                  <li class="page-item"><a class="page-link" href="#">1</a></li>
-                  <li class="page-item"><a class="page-link" href="#">2</a></li>
-                  <li class="page-item"><a class="page-link" href="#">3</a></li>
-                  <li class="page-item"><a class="page-link" href="#">下一页</a></li>
-                  <li class="page-item">
-                      <a class="page-link" href="#">末页</a>
-                  </li>
-              </ul>
-          </nav>
-      </div>
+    <div class="container">
+      <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-end">
+          <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1">首页</a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">上一页</a></li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">下一页</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#">末页</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </div>
   <!-- 底部导航 -->
   <div class="container-fluid mt-5 bottom-nav">
@@ -308,7 +152,7 @@
         <div class="col-12 col-md-8">
           <div class="row">
             <div class="col-4 bottom-nav-item">
-              <a href="#">
+              <a href="About-Us.html">
                 <h3>关于我们</h3>
               </a>
               <img src="img/web/line2.png" alt="">
@@ -318,7 +162,7 @@
               </div>
             </div>
             <div class="col-4 bottom-nav-item">
-              <a href="#">
+              <a href="Company-Pro.html">
                 <h3>公司产品</h3>
               </a>
               <img src="img/web/line2.png" alt="">
@@ -330,7 +174,7 @@
               </div>
             </div>
             <div class="col-4 bottom-nav-item">
-              <a href="#">
+              <a href="Sucess-Case.html">
                 <h3>成功案例</h3>
               </a>
               <img src="img/web/line2.png" alt="">
@@ -343,7 +187,7 @@
           </div>
         </div>
         <div class="col-12 col-lg-4 bottom-nav-item">
-          <a href="contact-us.shtml">
+          <a href="Content-Us.html">
             <h3>联系我们</h3>
           </a>
           <img src="img/web/line2.png" alt="">
