--- a/Sucess-Case.html
+++ b/Sucess-Case.html
@@ -27,26 +27,26 @@
         </button>
         <div class="collapse navbar-collapse " id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
+            <li class="nav-item px-2">
+              <a class="nav-link" href="Home.html">首页<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="About-Us.html">关于我们</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link" href="Company-Pro.html">公司产品</a>
+            </li>
             <li class="nav-item active px-2">
-              <a class="nav-link" href="#">首页<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="Sucess-Case.html">成功案例</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="#">关于我们</a>
+              <a class="nav-link" href="Cooper-Parter.html">合作伙伴</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="#">公司产品</a>
+              <a class="nav-link" href="News-Center.html">新闻中心</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="#">成功案例</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">合作伙伴</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">新闻中心</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link" href="#">联系我们</a>
+              <a class="nav-link" href="Content-Us.html">联系我们</a>
             </li>
           </ul>
         </div>
@@ -74,35 +74,33 @@
   <div class="container">
     <div class="row">
       <div class="container-fluid case-page-01 my-md-5 ">
-          <img src="img/web/case-item-bg01.png" alt="" class="d-md-none w-100 rounded">
-          <div class="m-md-5 case-introduce pb-5 ">
-            <h3>宝塔桥街道</h3>
-            <span>2017-09-03</span>
-            <p>方家营、桥东街、燕江路、燕江园、金陵二村、金陵新四村、金陵新六村、水关桥、象山、幕府西路</p>
-          </div>
+        <img src="img/web/case-item-bg01.png" alt="" class="d-md-none w-100 rounded">
+        <div class="m-md-5 case-introduce pb-5 ">
+          <h3>宝塔桥街道</h3>
+          <span>2017-09-03</span>
+          <p>方家营、桥东街、燕江路、燕江园、金陵二村、金陵新四村、金陵新六村、水关桥、象山、幕府西路</p>
+        </div>
       </div>
       <div class="container-fluid case-page-02 my-md-5 ">
-          <img src="img/web/case-item-bg02.png" alt="" class="d-md-none w-100 rounded">
-          <div class="m-md-5 case-introduce pb-5 ">
-            <h3>新街口街道</h3>
-            <span>2017-09-06</span>
-            <p>长江路社区、唱经楼社区、北门桥社区、香铺营社区、大石桥社区、成贤街社区</p>
-          </div>
+        <img src="img/web/case-item-bg02.png" alt="" class="d-md-none w-100 rounded">
+        <div class="m-md-5 case-introduce pb-5 ">
+          <h3>新街口街道</h3>
+          <span>2017-09-06</span>
+          <p>长江路社区、唱经楼社区、北门桥社区、香铺营社区、大石桥社区、成贤街社区</p>
+        </div>
       </div>
       <div class="container-fluid case-page-03 my-md-5 ">
-          <img src="img/web/case-item-bg01.png" alt="" class="d-md-none w-100 rounded">
-          <div class="m-md-5 case-introduce pb-5 ">
-                <h3>江北新区</h3>
-                <span>2017-09-03</span>
-                <p>研创园</p>
-            </div>
-          </div>
+        <img src="img/web/case-item-bg01.png" alt="" class="d-md-none w-100 rounded">
+        <div class="m-md-5 case-introduce pb-5 ">
+          <h3>江北新区</h3>
+          <span>2017-09-03</span>
+          <p>研创园</p>
+        </div>
       </div>
-      
     </div>
+
   </div>
-
-
+  </div>
 
   <!-- 底部导航 -->
   <div class="container-fluid mt-5 bottom-nav">
@@ -111,7 +109,7 @@
         <div class="col-12 col-md-8">
           <div class="row">
             <div class="col-4 bottom-nav-item">
-              <a href="#">
+              <a href="About-Us.html">
                 <h3>关于我们</h3>
               </a>
               <img src="img/web/line2.png" alt="">
@@ -121,7 +119,7 @@
               </div>
             </div>
             <div class="col-4 bottom-nav-item">
-              <a href="#">
+              <a href="Company-Pro.html">
                 <h3>公司产品</h3>
               </a>
               <img src="img/web/line2.png" alt="">
@@ -133,7 +131,7 @@
               </div>
             </div>
             <div class="col-4 bottom-nav-item">
-              <a href="#">
+              <a href="Sucess-Case.html">
                 <h3>成功案例</h3>
               </a>
               <img src="img/web/line2.png" alt="">
@@ -146,7 +144,7 @@
           </div>
         </div>
         <div class="col-12 col-lg-4 bottom-nav-item">
-          <a href="contact-us.shtml">
+          <a href="Content-Us.html">
             <h3>联系我们</h3>
           </a>
           <img src="img/web/line2.png" alt="">
